--- a/Copy_of_task.ipynb
+++ b/Copy_of_task.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1NNB3S5EdivrR9aRSNaBAkl4Xo-0qiAeI",
-      "authorship_tag": "ABX9TyMPDWACgqQro4cjiP3UrSDm",
+      "authorship_tag": "ABX9TyOCDv1EjYXUCPY6tC0RVEJ5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,14 +67,14 @@
         "import json\n",
         "import pandas as pd\n",
         "\n",
-        "f1 = open('input/18246.json')\n",
+        "f1 = open('drive/MyDrive/Data_Colab/18246.json')\n",
         "data_18 = json.load(f1)\n",
-        "f2 = open('input/12387.json')\n",
+        "f2 = open('drive/MyDrive/Data_Colab/12387.json')\n",
         "data_12 = json.load(f2)\n",
-        "f3 = open('input/16859.json')\n",
+        "f3 = open('drive/MyDrive/Data_Colab/16859.json')\n",
         "data_16 = json.load(f3)\n",
         "\n",
-        "with open ('input/to_fill.csv', 'r') as file, open('Result/output_file.csv', 'w', newline='') as output_file:\n",
+        "with open ('drive/MyDrive/Data_Colab/to_fill.csv', 'r') as file, open('drive/MyDrive/Data_Colab/output_file.csv', 'w', newline='') as output_file:\n",
         "    reader = csv.reader(file)\n",
         "    writer = csv.writer(output_file)\n",
         "    \n",
@@ -100,7 +100,7 @@
       "metadata": {
         "id": "tAlxdPJ7f4Ql"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -114,13 +114,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "J51pbGkZI4Wf",
-        "outputId": "40ab8386-0a5c-478d-f69c-5958c47d0db5"
+        "outputId": "0fcfa94b-99a7-40ef-fb4a-60cc83bf58b4"
       },
       "outputs": [
         {
@@ -144,8 +144,8 @@
         "from sklearn.feature_extraction.text import CountVectorizer\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "\n",
-        "data = pd.read_csv('input/stories.csv')\n",
-        "test_data = pd.read_csv('Result/output_file.csv')\n",
+        "data = pd.read_csv('drive/MyDrive/Data_Colab/stories.csv')\n",
+        "test_data = pd.read_csv('drive/MyDrive/Data_Colab/output_file.csv')\n",
         "X_train = np.array(data['body'])\n",
         "y_train = np.array(data['topic'])\n",
         "X_test = np.array(test_data['body'])\n",
@@ -166,7 +166,7 @@
         "import csv\n",
         "from itertools import islice\n",
         "\n",
-        "with open ('Result/output_file.csv', 'r') as file, open('Result/final_file.csv', 'w', newline='') as final_file:\n",
+        "with open ('drive/MyDrive/Data_Colab/output_file.csv', 'r') as file, open('drive/MyDrive/Data_Colab/final_file.csv', 'w', newline='') as final_file:\n",
         "    reader = csv.reader(file)\n",
         "    writer = csv.writer(final_file)\n",
         "    counter = 1\n",
@@ -179,118 +179,8 @@
       "metadata": {
         "id": "9xyAsdV6q9iT"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git init\n",
-        "!git config --global user.email \"shba501@gmail.com\"\n",
-        "!git config --global user.name \"bakhshianshakiba\"\n",
-        "!git add /content/drive/MyDrive/Data_Colab/task.ipynb  \n",
-        "!git commit -m \"Add notebook\"\n",
-        "!git remote add origin https://github.com/bakhshianshakiba/Data_Colab_news.git  \n",
-        "!git push -u origin master\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "eITulDbdwoRF",
-        "outputId": "936edccc-023e-4ca2-e35b-3c65ee958c99"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Reinitialized existing Git repository in /content/.git/\n",
-            "On branch master\n",
-            "Untracked files:\n",
-            "  (use \"git add <file>...\" to include in what will be committed)\n",
-            "\t\u001b[31m.config/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/Colab Notebooks/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/Documents/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/EEG/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/X.csv\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/X/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/X1_data.csv\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/X_not_normal.csv\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/X_spc.csv\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/X_train/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/Y/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/apk/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/driver/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/empty_array (6).csv\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/graph/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/metadata.csv\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/metadata.txt\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/metadata/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/new/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/new_statistical/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/new_train_data/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/normal_qrs/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/part1_1.csv\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/part4/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/part_a/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/part_b/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/part_c/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/qrs/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/qrs_intp/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/qrs_normal_part1/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/qrs_normal_part2/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/qrs_normal_part3/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/rri/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/rri_feature/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/rri_feature_x/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/rri_intp/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/rri_x/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/sleep/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/specs/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/statistical/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/statistical_features.csv\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/statistical_features_35X.csv\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/statistical_features_train_input.csv\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/task1/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/test_input.npy\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/test_label.npy\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/train/\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/train_data_x.csv\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/train_input.npy\u001b[m\n",
-            "\t\u001b[31mdrive/MyDrive/train_label.npy\u001b[m\n",
-            "\t\u001b[31msample_data/\u001b[m\n",
-            "\n",
-            "nothing added to commit but untracked files present (use \"git add\" to track)\n",
-            "fatal: remote origin already exists.\n",
-            "fatal: could not read Username for 'https://github.com': No such device or address\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!ls /content/drive/MyDrive/Data_Colab"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "E6EBuX0RyH_z",
-        "outputId": "8482c892-e4fd-4416-d57f-8842eaffbba5"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "task.ipynb\n"
-          ]
-        }
-      ]
     }
   ]
 }
